--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
     "graphdb": "^1.1.1",
+    "moment": "^2.24.0",
+    "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
+    "react-swipeable-views": "^0.13.3",
+    "react-virtualized": "^9.21.2",
     "underscore": "^1.9.1"
   },
   "scripts": {
