--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
     "moment": "^2.24.0",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
+    "react-app-rewire-hot-loader": "^2.0.1",
+    "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
+    "react-hot-loader": "^4.12.18",
     "react-scripts": "3.2.0",
     "react-swipeable-views": "^0.13.3",
     "react-virtualized": "^9.21.2",
     "underscore": "^1.9.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
