--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@material-ui/core": "^4.7.0",
     "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
+    "d3": "^4.7.4",
+    "event-drops": "^1.3.0",
     "graphdb": "^1.1.1",
     "moment": "^2.24.0",
     "node-sass": "^4.13.0",
